instance multiresolution modifier error. #31880

Closed
opened 2012-06-20 08:49:09 +02:00 by Massimiliano Puliero · 6 comments

%%%strange behavior with instanced object with multiresolution modifier:

*if subdivide one of both the other one will look strange, or different.
*in some cases (I cant reproduce it often, sorry) if I try to "undo" the mesh will totally mess up

win7 64 svn48065

thankyou ^^%%%

%%%strange behavior with instanced object with multiresolution modifier: *if subdivide one of both the other one will look strange, or different. *in some cases (I cant reproduce it often, sorry) if I try to "undo" the mesh will totally mess up win7 64 svn48065 thankyou ^^%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%This happens because multires modifier is storing subdivisions levels. When you subdivide multires, data associated with this (which is stored in Mesh datablock) is running out of sync with instanced objects.

Not actually sure about good ways solving this. Simpliest case is just update instanced objects when multires is being subdivided / removed higher, but that's kind of hacky.

Nick, do you have some better ideas here?%%%

%%%This happens because multires modifier is storing subdivisions levels. When you subdivide multires, data associated with this (which is stored in Mesh datablock) is running out of sync with instanced objects. Not actually sure about good ways solving this. Simpliest case is just update instanced objects when multires is being subdivided / removed higher, but that's kind of hacky. Nick, do you have some better ideas here?%%%

%%%Don't see any better way to do it than that. I uploaded a patch here: http://codereview.appspot.com/6332047, if you have time let me know if this seems OK.%%%

%%%Don't see any better way to do it than that. I uploaded a patch here: http://codereview.appspot.com/6332047, if you have time let me know if this seems OK.%%%

%%%Replied to the code review page. Current patch seems ok, just one more thing whichcould lead to the same issue. Culd be handled in separate commit tho.%%%

%%%Replied to the code review page. Current patch seems ok, just one more thing whichcould lead to the same issue. Culd be handled in separate commit tho.%%%

%%%Fixed in r48247.%%%

%%%Fixed in r48247.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31880
No description provided.