source/blender/editors/include/ED_object.h
@@ -176,6 +176,12 @@ int ED_object_modifier_apply(struct ReportList *reports, struct Scene *scene,
                              struct Object *ob, struct ModifierData *md, int mode);
 int ED_object_modifier_copy(struct ReportList *reports, struct Object *ob, struct ModifierData *md);
 
+int ED_object_iter_other(struct Main *bmain, struct Object *orig_ob, int include_orig,
+						 int (*callback)(struct Object *ob, void *callback_data),
+						 void *callback_data);
+
+int ED_object_multires_update_totlevels_cb(struct Object *ob, void *totlevel_v);
+
 #ifdef __cplusplus
 }
 #endif
